<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/plist"
    >
    
    <TextView
        android:id="@+id/tvdisp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        
        />
    
    <TextView
        android:id="@+id/fileName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
               
        />
    
    
   <TextView
        android:id="@+id/prog1"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prog1" 
        android:textSize="24sp"
        android:layout_below="@+id/fileName"
        android:onClick="onClick"
		android:clickable="true"
        />

    <TextView
        android:id="@+id/prog2"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog1"
        android:text="@string/prog2"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog3"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog2"
        android:text="@string/prog3"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog4"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog3"
        android:text="@string/prog4"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog5"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog4"
        android:text="@string/prog5"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog6"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog5"
        android:text="@string/prog6"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog7"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog6"
        android:text="@string/prog7"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog8"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog7"
        android:text="@string/prog8"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog9"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog8"
        android:text="@string/prog9"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog10"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog9"
        android:text="@string/prog10"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog11"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog10"
        android:text="@string/prog11"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog12"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog11"
        android:text="@string/prog12"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog13"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog12"
        android:text="@string/prog13"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog14"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog13"
        android:text="@string/prog14"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />
    <TextView
        android:id="@+id/prog15"
        android:background="@drawable/tv_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prog14"
        android:text="@string/prog15"
        android:textSize="24sp" 
        android:onClick="onClick"
		android:clickable="true"
        />

    

</RelativeLayout>